--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Lundalogik/partial-date#readme",
   "devDependencies": {
     "@limetech/eslint-config": "^2.0.0",
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
     "typescript": "^5.2.2"
   }
 }
