--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "mocha": "^10.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.10"
   }
 }
