--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/Lundalogik/partial-date#readme",
   "devDependencies": {
     "@limetech/eslint-config": "^2.0.0",
+    "@types/chai": "^4.3.10",
     "@types/mocha": "^10.0.4",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
