--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mocha": "^10.0.4",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
+    "timezone-mock": "^1.3.6",
     "ts-node": "^9.1.1",
     "typescript": "^5.2.2"
   },
