chore: update typescript config for compatibility with dayjs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "skipLibCheck": true,
     "removeComments": false,
     "baseUrl": ".",
-    "importHelpers": true
+    "importHelpers": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["**/node_modules", "**/dist"],
   "include": ["./src"]
