--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -22,6 +22,22 @@ jobs:
     - run: npm ci
     - run: npm run lint
 
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Read .nvmrc
+      run: echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_OUTPUT
+      id: nvm
+    - uses: actions/setup-node@v3
+      with:
+        node-version: "${{ steps.nvm.outputs.NVMRC }}"
+    - run: node -v && npm -v
+    - run: npm ci
+    - run: npm run build
+    - run: npm test
+
   commitlint:
     name: Commitlint
     runs-on: ubuntu-latest
@@ -42,7 +58,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
   autoapprove:
-    needs: [lint, autosquash]
+    needs: [lint, test, autosquash]
     # Only run job if the PR comes from a repo owned by Lime and the PR was
     # created by Dependabot.
     if: github.event.pull_request.head.repo.owner.login == 'Lundalogik' && github.actor == 'dependabot[bot]' && github.event_name != 'merge_group'
