--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
         node-version: "${{ steps.nvm.outputs.NVMRC }}"
     - run: node -v && npm -v
     - run: npm ci
+    - run: git config --global user.email "93315277+lime-opensource@users.noreply.github.com"
+    - run: git config --global user.name "Lime Technologies OSS"
+    - run: npm run build
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v3
       id: semantic # Need an `id` for output variables
