--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,15 @@
-node_modules/@limetech/eslint-config/.prettierrc
+{
+  "endOfLine": "auto",
+  "singleQuote": true,
+  "tabWidth": 4,
+  "trailingComma": "es5",
+  "overrides": [
+    {
+      "files": [".prettierrc", "*.json"],
+      "options": {
+        "parser": "json",
+        "tabWidth": 2
+      }
+    }
+  ]
+}
