fix: rename package from `partial-date` to `@limetech/partial-date`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "partial-date",
+  "name": "@limetech/partial-date",
   "version": "1.0.0",
   "description": "A package for handling partial dates, like a date with no time, or a time with no date.",
   "author": "Lime Technologies",
